# combot

./: .git-blame-ignore-revs  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  bot.py  command.py  db.py  docker-compose.yml  example.env  pyproject.toml  requirements.txt  runner.py  settings.py  start_bot.sh
alembic/: env.py
alembic/versions/: 3c5a2012ecae_initial_revision.py  bef7e803bc25_user_is_bot.py
app/: __init__.py  api.py  command.py  db.py  requirements.txt  settings.py
app/bot/: bot.py  models.py  utils.py
app/db/: __init__.py
app/plugins/admin_commands/: __init__.py
app/plugins/chicks/: __init__.py  chicks.csv
app/plugins/combat_protector/: __init__.py
app/plugins/experience/: __init__.py  cmd_addexp.py  cmd_mylvl.py  cmd_toplvl.py  data.py  levelup_messages.txt  models.py
app/plugins/feed_forward/: __init__.py  models.py
app/plugins/hw/: __init__.py
app/plugins/mall/: __init__.py  db.py
app/plugins/schedule/: __init__.py
app/plugins/static_commands/: __init__.py  pay.md
app/scripts/: start_bot.sh
plugins/chicks/: __init__.py
src/combot/: __main__.py  celery.py  combot.py  command.py  settings.py
src/combot/bot/: __init__.py  bot.py  celery_task.py  models.py  utils.py
src/combot/db/: session.py
src/combot/plugins/chicks/: __init__.py
src/combot/plugins/combat_protector/: __init__.py
src/combot/plugins/experience/: __init__.py  cmd_addexp.py  cmd_mylvl.py  cmd_toplvl.py  data.py  experience.csv  luck_messages.txt  models.py
src/combot/plugins/feed_forward/: __init__.py  (+1 more)
src/combot/scripts/: start_bot.sh
(+7 files in other folders)
