[project]
name = "combot"
version = "0.1.0"
description = "Dorm 6 Telegram bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.2",
    "celery>=5.4.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.8",
    "requests>=2.32.3",
    "sentry-sdk>=2.14.0",
    "sqlalchemy>=2.0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
combot = "combot.combot:main"
